--- a/client/src/dialogs/connect_dialog.ui
+++ b/client/src/dialogs/connect_dialog.ui
@@ -10,6 +10,12 @@
     <height>147</height>
    </rect>
   </property>
+  <property name="maximumSize">
+   <size>
+    <width>318</width>
+    <height>147</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Insert Credentials</string>
   </property>
