--- a/client/styles/default.css
+++ b/client/styles/default.css
@@ -184,3 +184,11 @@ QCheckBox::indicator:checked {
 QCheckBox::indicator:checked:hover {
     border-image: url(:/png/check_on_h.png);
 }
+
+QSlider::handle:horizontal {
+    background-color: orange;
+}
+
+QSlider::handle:horizontal:disabled {
+    background-color: gray;
+}
