Add discrete absolute engine move.

--- a/client/src/windows/freejog_window.ui
+++ b/client/src/windows/freejog_window.ui
@@ -265,6 +265,9 @@ Stop automatic running process to enable.</string>
        <property name="decimals">
         <number>3</number>
        </property>
+       <property name="minimum">
+        <double>-360.000000000000000</double>
+       </property>
        <property name="maximum">
         <double>360.000000000000000</double>
        </property>
@@ -357,6 +360,9 @@ Stop automatic running process to enable.</string>
        </property>
        <property name="decimals">
         <number>3</number>
+       </property>
+       <property name="minimum">
+        <double>-360.000000000000000</double>
        </property>
        <property name="maximum">
         <double>360.000000000000000</double>
