--- a/client/res/res.qrc
+++ b/client/res/res.qrc
@@ -22,6 +22,7 @@
     <file alias="splash.png">png/splash.png</file>
     <file alias="freejog_window.png">png/freejog_window.png</file>
     <file alias="position_window.png">png/position_window.png</file>
+    <file alias="channelviz_window.png">png/channelviz_window.png</file>
   </qresource>
 
   <qresource prefix="/sound">
