Add acquisition task scheduler boilerplate.

--- a/client/res/res.qrc
+++ b/client/res/res.qrc
@@ -25,6 +25,8 @@
     <file alias="channelviz_window.png">png/channelviz_window.png</file>
     <file alias="layout_window.png">png/layout_window.png</file>
     <file alias="mcaspectrum_window.png">png/mcaspectrum_window.png</file>
+    <file alias="spectraldisplay_window.png">png/spectraldisplay_window.png</file>
+    <file alias="acquisitioncontrol_window.png">png/acquisitioncontrol_window.png</file>
   </qresource>
 
   <qresource prefix="/sound">
