--- a/client/src/windows/acquisitioncontrol_window.ui
+++ b/client/src/windows/acquisitioncontrol_window.ui
@@ -143,6 +143,9 @@
        <property name="text">
         <string>Not Connected</string>
        </property>
+       <property name="readOnly">
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
     </layout>
