--- a/client/src/windows/acquisitioncontrol_window.ui
+++ b/client/src/windows/acquisitioncontrol_window.ui
@@ -141,7 +141,7 @@
         <string notr="true">color: rgb(255, 0, 0);</string>
        </property>
        <property name="text">
-        <string>Not Connected</string>
+        <string>Not Connected.</string>
        </property>
        <property name="readOnly">
         <bool>true</bool>
